[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-lib"
version = "0.1.0"
description: "The library for CPP project Electricity Monitor"
authors = [
    { name = "Zhao Zhang"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = ""

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]