[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-lib"
version = "0.1.3"
description = "The library for CPP project Electricity Monitor"
authors = [
    { name = "Zhao Zhang"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/pnlync/electricity-monitor-lib"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]